<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="es.pccitos.gcsettings.MainActivity$PlaceholderFragment"
    android:background="@color/ColorFondo">

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cbActivar_bootanimation"
        android:id="@+id/cbActivar_bootanimation"
        android:textColor="@color/cbColorText"
        android:checked="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cbActivar_shutdownanimation"
        android:id="@+id/cbActivar_shutdownanimation"
        android:textColor="@color/cbColorText"
        android:checked="false"
        android:layout_below="@+id/cbActivar_bootanimation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cbActivar_swap"
        android:id="@+id/cbActivar_swap"
        android:textColor="@color/cbColorText"
        android:checked="false"
        android:layout_below="@+id/cbActivar_shutdownanimation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cbUpdatesToSystem"
        android:id="@+id/cbUpdatesToSystem"
        android:textColor="@color/cbColorText"
        android:checked="false"
        android:layout_below="@+id/cbActivar_swap"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cbText2sd_ext"
        android:id="@+id/cbData2sd_ext"
        android:textColor="@color/cbColorText"
        android:checked="false"
        android:enabled="false"
        android:layout_below="@+id/cbUpdatesToSystem"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvInfo"
        android:id="@+id/tvInfo"
        android:textColor="@color/ColorInfo"
        android:layout_above="@+id/btAplicar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/btAplicar"
        android:id="@+id/btAplicar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/btSalir"
        android:id="@+id/btSalir"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
